754: Fixes for find_logic code.
Change-Id: Ia5da17762058ce429126dd65a5fb6cd7143dea1b

--- a/src/win32/burp/Makefile
+++ b/src/win32/burp/Makefile
@@ -48,6 +48,7 @@ CLIENT_OBJS = \
 	$(OBJDIR)/client/extra_comms.o \
 	$(OBJDIR)/client/extrameta.o \
 	$(OBJDIR)/client/find.o \
+	$(OBJDIR)/client/find_logic.o \
 	$(OBJDIR)/client/glob_windows.o \
 	$(OBJDIR)/client/list.o \
 	$(OBJDIR)/client/main.o \
